Bug 1420028: Handle UTC date/time strings in Date.parse(). r=jorendorff

--HG--
extra : rebase_source : 78abb720bd49e91b79162f1fbc120b6318846abc