js/src/jsdate.cpp
@@ -1150,10 +1150,13 @@ ParseDate(const CharT* s, size_t length, ClippedTime* result)
     int sec = -1;
     int tzOffset = -1;
 
+    // One of '+', '-', ':', '/', or 0 (the default value).
     int prevc = 0;
 
     bool seenPlusMinus = false;
     bool seenMonthName = false;
+    bool seenFullYear = false;
+    bool negativeYear = false;
 
     size_t i = 0;
     while (i < length) {
@@ -1181,11 +1184,13 @@ ParseDate(const CharT* s, size_t length, ClippedTime* result)
             continue;
         }
         if ('0' <= c && c <= '9') {
+            size_t partStart = i - 1;
             int n = c - '0';
             while (i < length && '0' <= (c = s[i]) && c <= '9') {
                 n = n * 10 + c - '0';
                 i++;
             }
+            size_t partLength = i - partStart;
 
             /*
              * Allow TZA before the year, so 'Wed Nov 05 21:49:11 GMT-0800 1997'
@@ -1195,7 +1200,17 @@ ParseDate(const CharT* s, size_t length, ClippedTime* result)
              * of GMT+4:30 works.
              */
 
-            if ((prevc == '+' || prevc == '-')/*  && year>=0 */) {
+            if (prevc == '-' && (tzOffset != 0 || seenPlusMinus) && partLength >= 4 && year < 0) {
+                // Parse as a negative, possibly zero-padded year if
+                // 1. the preceding character is '-',
+                // 2. the TZA is not 'GMT' (tested by |tzOffset != 0|),
+                // 3. or a TZA was already parsed |seenPlusMinus == true|,
+                // 4. the part length is at least 4 (to parse '-08' as a TZA),
+                // 5. and we did not already parse a year |year < 0|.
+                year = n;
+                seenFullYear = true;
+                negativeYear = true;
+            } else if ((prevc == '+' || prevc == '-')/*  && year>=0 */) {
                 /* Make ':' case below change tzOffset. */
                 seenPlusMinus = true;
 
@@ -1209,6 +1224,8 @@ ParseDate(const CharT* s, size_t length, ClippedTime* result)
                 if (prevc == '+')       /* plus means east of GMT */
                     n = -n;
 
+                // Reject if not preceded by 'GMT' or if a time zone offset
+                // was already parsed.
                 if (tzOffset != 0 && tzOffset != -1) {
                     return false;
                 }
@@ -1258,6 +1275,7 @@ ParseDate(const CharT* s, size_t length, ClippedTime* result)
                 mday = /*byte*/ n;
             } else if (mon >= 0 && mday >= 0 && year < 0) {
                 year = n;
+                seenFullYear = partLength >= 4;
             } else {
                 return false;
             }
@@ -1348,11 +1366,7 @@ ParseDate(const CharT* s, size_t length, ClippedTime* result)
      *         is invalid.
      *
      *         The year is taken to be either the greater of the values f, l or
-     *         whichever is set to zero. If the year is greater than or equal to
-     *         50 and less than 100, it is considered to be the number of years
-     *         after 1900. If the year is less than 50 it is considered to be the
-     *         number of years after 2000, otherwise it is considered to be the
-     *         number of years after 0.
+     *         whichever is set to zero.
      *
      * Case 2. The input string is of the form "f/m/l" where f, m and l are
      *         integers, e.g. 7/16/45. mon, mday and year values are adjusted
@@ -1360,21 +1374,15 @@ ParseDate(const CharT* s, size_t length, ClippedTime* result)
      *
      *         a. If 0 < f <= 12 and 0 < l <= 31, f/m/l is interpreted as
      *         month/day/year.
-     *            i.  If year < 50, it is the number of years after 2000
-     *            ii. If year >= 50, it is the number of years after 1900.
-     *           iii. If year >= 100, it is the number of years after 0.
      *         b. If 31 < f and 0 < m <= 12 and 0 < l <= 31 f/m/l is
      *         interpreted as year/month/day
-     *            i.  If year < 50, it is the number of years after 2000
-     *            ii. If year >= 50, it is the number of years after 1900.
-     *           iii. If year >= 100, it is the number of years after 0.
      */
     if (seenMonthName) {
         if (mday >= 100 && mon >= 100) {
             return false;
         }
 
-        if (year > 0 && (mday == 0 || mday > year)) {
+        if (year > 0 && (mday == 0 || mday > year) && !seenFullYear) {
             int temp = year;
             year = mday;
             mday = temp;
@@ -1388,7 +1396,7 @@ ParseDate(const CharT* s, size_t length, ClippedTime* result)
         /* (a) month/day/year */
     } else {
         /* (b) year/month/day */
-        if (mon > 31 && mday <= 12 && year <= 31) {
+        if (mon > 31 && mday <= 12 && year <= 31 && !seenFullYear) {
             int temp = year;
             year = mon;
             mon = mday;
@@ -1398,10 +1406,20 @@ ParseDate(const CharT* s, size_t length, ClippedTime* result)
         }
     }
 
-    if (year < 50) {
-        year += 2000;
-    } else if (year >= 50 && year < 100) {
-        year += 1900;
+    // If the year is greater than or equal to 50 and less than 100, it is
+    // considered to be the number of years after 1900. If the year is less
+    // than 50 it is considered to be the number of years after 2000,
+    // otherwise it is considered to be the number of years after 0.
+    if (!seenFullYear) {
+        if (year < 50) {
+            year += 2000;
+        } else if (year >= 50 && year < 100) {
+            year += 1900;
+        }
+    }
+
+    if (negativeYear) {
+        year = -year;
     }
 
     mon -= 1; /* convert month to 0-based */
